# imgsz-rs

./: Cargo.toml  README.md
src/: error.rs  img_info.rs  lib.rs
src/decoders/: gif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
